intercom-attributes/tests/data/ui/span-externtype-error.rs.stderr
error[E0277]: the trait bound `NotExternType: intercom::type_system::ExternType<intercom::type_system::AutomationTypeSystem>` is not satisfied
  --> C:/Dev/Projects/rust-com/intercom-attributes/tests/data/ui/span-externtype-error.rs:12:5
   |
12 |     fn arg_type(&self, bad_type: NotExternType);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::type_system::ExternType<intercom::type_system::AutomationTypeSystem>` is not implemented for `NotExternType`

error[E0277]: the trait bound `NotExternType: intercom::type_system::ExternType<intercom::type_system::RawTypeSystem>` is not satisfied
  --> C:/Dev/Projects/rust-com/intercom-attributes/tests/data/ui/span-externtype-error.rs:12:5
   |
12 |     fn arg_type(&self, bad_type: NotExternType);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::type_system::ExternType<intercom::type_system::RawTypeSystem>` is not implemented for `NotExternType`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
